@@ -1,8 +1,11 @@
 package com.Payment.Shop.service.product;
 
 import com.Payment.Shop.dto.request.CreateProductRequest;
+import com.Payment.Shop.dto.request.CreateProductVariantRequest;
 import com.Payment.Shop.dto.request.UpdateProductRequest;
 import com.Payment.Shop.dto.response.BaseProductResponse;
+import com.Payment.Shop.dto.response.CategoryResponse;
+import com.Payment.Shop.dto.response.ProductVariantResponse;
 import com.Payment.Shop.entity.Category;
 import com.Payment.Shop.entity.Product;
 import com.Payment.Shop.entity.ProductVariant;
@@ -21,6 +24,7 @@ import org.springframework.stereotype.Service;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
+import java.util.Map;
 
 @Service
 @Slf4j
@@ -46,63 +50,54 @@ public class ProductServiceImpl implements IProductService {
         this.categoryRepository = categoryRepository;
     }
 
-    @Override
-    @Transactional
-    public BaseProductResponse createProduct(CreateProductRequest request) {
-        // Fetch category từ DB
-        Category category = categoryRepository.findById(request.getCategoryId())
-                .orElseThrow(() -> new RuntimeException("Category not found: " + request.getCategoryId()));
+    // @Override
+    // @Transactional
+//     public BaseProductResponse createProduct(CreateProductRequest request) {
+//         // Fetch category từ DB
+//         Category category = categoryRepository.findById(request.getCategoryId())
+//                 .orElseThrow(() -> new RuntimeException("Category not found: " + request.getCategoryId()));
 
-        // Build Product
-        Product product = new Product();
-        product.setName(request.getName());
-        product.setDescription(request.getDescription());
-        product.setBasePrice(request.getBasePrice());
-        product.setDiscountPercent(request.getDiscountPercent());
-        product.setCategory(category);
-        product.setImageUrl(request.getImageUrl());
-        product.setProductVariants(new ArrayList<>());
+//         // Build Product
+//         Product product = new Product();
+//         product.setName(request.getName());
+//         product.setDescription(request.getDescription());
+//         product.setCategory(category);
+//         product.setImageUrl(request.getImageUrl());
+//         product.setProductVariants(new ArrayList<>());
 
-        entityManager.persist(product);
+//         entityManager.persist(product);
 
-        // Build variants nếu có
-        if (request.getVariants() != null && !request.getVariants().isEmpty()) {
-            for (var variantReq : request.getVariants()) {
-                ProductVariant variant = new ProductVariant();
-                variant.setSku(variantReq.getSku());
-                variant.setStock(variantReq.getStockQuantity());
-                variant.setPrice(variantReq.getPrice());
-                variant.setProduct(product);
-                variant.setProductVariantOptions(new ArrayList<>());
+//         // Build variants nếu có
+//         if (request.getVariants() != null && !request.getVariants().isEmpty()) {
+//             for (var variantReq : request.getVariants()) {
+//                 ProductVariant variant = new ProductVariant();
+//                 variant.setSku(variantReq.getSku());
+//                 variant.setStock(variantReq.getStockQuantity());
+//                 variant.setPrice(variantReq.getPrice());
+//                 variant.setProduct(product);
+//                 variant.setProductVariantOptions(new ArrayList<>());
 
-                if (variantReq.getAttributes() != null) {
-                    for (var entry : variantReq.getAttributes().entrySet()) {
-                        ProductVariantOption option = new ProductVariantOption(entry.getKey(), entry.getValue());
-                        option.setProductVariant(variant);
-                        variant.getProductVariantOptions().add(option);
-                    }
-                }
+//                 if (variantReq.getAttributes() != null) {
+//                     for (var entry : variantReq.getAttributes().entrySet()) {
+//                         ProductVariantOption option = new ProductVariantOption(entry.getKey(), entry.getValue());
+//                         option.setProductVariant(variant);
+//                         variant.getProductVariantOptions().add(option);
+//                     }
+//                 }
 
-                entityManager.persist(variant);
-                variant.getProductVariantOptions().forEach(entityManager::persist);
-                product.getProductVariants().add(variant);
-            }
-        }
+//                 entityManager.persist(variant);
+//                 variant.getProductVariantOptions().forEach(entityManager::persist);
+//                 product.getProductVariants().add(variant);
+//             }
+//         }
 
-        entityManager.flush();
-        entityManager.clear();
+//         entityManager.flush();
+//         entityManager.clear();
 
-        return modelMapper.map(product, BaseProductResponse.class);
-    }
+//         return modelMapper.map(product, BaseProductResponse.class);
+//     }
 
     @Override
-    // public List<BaseProductResponse> getAllProducts(String name, Long categoryId) {
-    //     List<Product> products = productRepository.findAllWithFilters(name, categoryId);
-    //     return products.stream()
-    //             .map(p -> modelMapper.map(p, BaseProductResponse.class))
-    //             .collect(Collectors.toList());
-    // }
-
     public List<BaseProductResponse> getAllProducts(String name, Long categoryId) {
     if (name != null && !name.trim().isEmpty()) {
         name = "%" + name.trim() + "%";
@@ -122,17 +117,71 @@ System.out.println("categoryId parameter: " + categoryId + " (class: " + (catego
     });
 
     return products.stream()
-            .map(p -> modelMapper.map(p, BaseProductResponse.class))
-            .collect(Collectors.toList());
+        .map(this::mapProduct)
+        .toList();
 }
 
 
+    // @Override
+    // public BaseProductResponse getProductById(Long id) {
+
+    //     Product product =
+    //             productRepository.findById(id)
+    //             .orElseThrow();
+
+    //     BaseProductResponse res =
+    //             modelMapper.map(
+    //                     product,
+    //                     BaseProductResponse.class
+    //             );
+
+    //     List<ProductVariantResponse> list =
+    //             product.getProductVariants()
+    //                     .stream()
+    //                     .map(v -> {
+
+    //                         ProductVariantResponse r =
+    //                                 new ProductVariantResponse();
+
+    //                         r.setSku(v.getSku());
+
+    //                         r.setPrice(v.getPrice());
+
+    //                         r.setStockQuantity(
+    //                                 v.getStock()
+    //                         );
+
+    //                         Map<String,String> attrs =
+    //                                 v.getProductVariantOptions()
+    //                                 .stream()
+    //                                 .collect(
+    //                                     Collectors.toMap(
+    //                                     o -> o.getAttribute(),
+    //                                     o -> o.getValue()
+    //                                     )
+    //                                 );
+
+    //                         r.setAttributes(attrs);
+
+    //                         return r;
+
+    //                     })
+    //                     .toList();
+
+    //     res.setVariants(list);
+
+    //     return res;
+    // }
+
     @Override
-    public BaseProductResponse getProductById(Long id) {
-        Product product = productRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Product not found: " + id));
-        return modelMapper.map(product, BaseProductResponse.class);
-    }
+public BaseProductResponse getProductById(Long id) {
+
+    Product product =
+            productRepository.findById(id)
+                    .orElseThrow();
+
+    return mapProduct(product);
+}
 
     @Override
     @Transactional
@@ -142,8 +191,6 @@ System.out.println("categoryId parameter: " + categoryId + " (class: " + (catego
 
         product.setName(request.getName());
         product.setDescription(request.getDescription());
-        product.setBasePrice(request.getBasePrice());
-        product.setDiscountPercent(request.getDiscountPercent() != null ? request.getDiscountPercent() : 0.0);
         product.setImageUrl(request.getImageUrl());
 
         if (request.getCategoryId() != null) {
@@ -182,6 +229,175 @@ System.out.println("categoryId parameter: " + categoryId + " (class: " + (catego
         return modelMapper.map(saved, BaseProductResponse.class);
     }
 
+    
+    @Override
+    @Transactional
+
+public BaseProductResponse createProduct(CreateProductRequest request) {
+
+    Category category = categoryRepository.findById(request.getCategoryId())
+            .orElseThrow(() -> new RuntimeException("Category not found"));
+
+    Product product = Product.builder()
+            .name(request.getName())
+            .description(request.getDescription())
+            .imageUrl(request.getImageUrl())
+            .category(category)
+            .build();
+
+
+    // =========================
+    // KHÔNG CÓ VARIANT
+    // =========================
+    if (request.getVariants() == null || request.getVariants().isEmpty()) {
+
+        ProductVariant variant = new ProductVariant();
+
+        variant.setSku("DEFAULT");
+
+        variant.setPrice(request.getPrice());
+        variant.setStock(request.getStockQuantity());
+
+        variant.setProduct(product);
+        product.getProductVariants().add(variant);
+
+    }
+
+    // =========================
+    // CÓ VARIANT
+    // =========================
+    else {
+
+        for (CreateProductVariantRequest v : request.getVariants()) {
+
+            ProductVariant variant = new ProductVariant();
+
+            String sku = generateSku(v.getAttributes());
+
+            variant.setSku(sku);
+            variant.setPrice(v.getPrice());
+            variant.setStock(v.getStockQuantity());
+
+            variant.setProduct(product);
+            product.getProductVariants().add(variant);
+
+
+            if (v.getAttributes() != null) {
+
+                for (var e : v.getAttributes().entrySet()) {
+
+                    ProductVariantOption opt =
+                            new ProductVariantOption(
+                                    e.getKey(),
+                                    e.getValue()
+                            );
+
+                    opt.setProductVariant(variant);
+                    variant.getProductVariantOptions().add(opt);
+                }
+            }
+        }
+    }
+
+    Product saved = productRepository.save(product);
+
+    return modelMapper.map(saved, BaseProductResponse.class);
+}
+
+    private String generateSku(Map<String, String> attrs) {
+
+    if (attrs == null || attrs.isEmpty()) {
+        return "DEFAULT";
+    }
+
+    return attrs.values()
+            .stream()
+            .map(v -> v.toUpperCase().replace(" ", ""))
+            .collect(Collectors.joining("-"));
+}
+
+    private BaseProductResponse mapProduct(Product product) {
+
+    BaseProductResponse res = new BaseProductResponse();
+
+    res.setId(product.getId());
+    res.setName(product.getName());
+    res.setDescription(product.getDescription());
+    res.setImageUrl(product.getImageUrl());
+
+    // ===== category =====
+
+    if (product.getCategory() != null) {
+
+        CategoryResponse c = new CategoryResponse();
+
+        c.setId(product.getCategory().getId());
+        c.setCategoryName(
+                product.getCategory().getCategoryName()
+        );
+
+        res.setCategory(c);
+    }
+
+    // ===== variants =====
+
+    if (product.getProductVariants() != null) {
+
+        List<ProductVariantResponse> list =
+                product.getProductVariants()
+                        .stream()
+                        .map(v -> {
+
+                            ProductVariantResponse r =
+                                    new ProductVariantResponse();
+
+                            r.setId(v.getId());
+
+                            r.setSku(v.getSku());
+
+                            r.setPrice(v.getPrice());
+
+                            r.setStockQuantity(
+                                    v.getStock()
+                            );
+
+                            Map<String, String> attrs =
+                                    v.getProductVariantOptions()
+                                            .stream()
+                                            .collect(
+                                                    Collectors.toMap(
+                                                            o -> o.getAttribute(),
+                                                            o -> o.getValue()
+                                                    )
+                                            );
+
+                            r.setAttributes(attrs);
+
+                            return r;
+
+                        })
+                        .toList();
+
+        res.setVariants(list);
+
+        // ===== price + stock lấy từ variant đầu =====
+
+        if (!product.getProductVariants().isEmpty()) {
+
+            ProductVariant v =
+                    product.getProductVariants().get(0);
+
+            res.setPrice(v.getPrice());
+
+            res.setStockQuantity(
+                    v.getStock()
+            );
+        }
+    }
+
+    return res;
+}
+
     @Override
     @Transactional
     public void deleteProduct(Long id) {
@@ -190,6 +406,7 @@ System.out.println("categoryId parameter: " + categoryId + " (class: " + (catego
         }
         productRepository.deleteById(id);
     }
+
 
     @Override
     public List<ProductVariant> findAllProductVariantByVariantId(List<Long> variantIds) {
